tea-shop/css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  color: #555;
  font-family: 'Lato', 'Arial', sans-serif;
  font-weight: 300;
  font-size: 20px;
  text-rendering: optimizeLegibility;
}

.under-construction {
  position: absolute;
  top: 24%;
  left: 50%;
  transform: translate(-50%);
}

.row {
  max-width: 1140px;
  margin: 0 auto;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url(../img/tea2.jpeg);
  /* background-image: url(../img/tea2.jpeg); */
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 100vh;
}

/* MAIN NAV */

.main-nav {
  float: right;
  margin-top: 50px;
}

.main-nav li {
  display: inline-block;
  margin-left: 40px;
}

.main-nav li a:link,
.main-nav li a:visited {
  padding: 7px 0;
  text-decoration: none;
  color: #fff;
  text-transform: uppercase;
  border-bottom: 2px solid transparent;
  transition: border-bottom 0.2s;
}

.main-nav li a:hover,
.main-nav li a:active {
  border-bottom: 2px solid #fff;
}

.header-container {
  width: 1140px;
  position: absolute;
  top: 45%;
  left: 43%;
  transform: translate(-50%, -50%);
}

/* LOGO */
.logo {
  height: 150px;
  width: 150px;
  position: absolute;
  left: 12.3%;
}

/* HEADINGS */

h1,
h2 {
  text-transform: uppercase;
  letter-spacing: 1px;
 
}

h1 {
  font-weight: 300;
  color: #fff;
  font-size: 240%;
  word-spacing: 4px;
  margin-bottom: 40px;
}

h2 {
  font-weight: 300;
  color: #555;
  font-size: 180%;
  word-spacing: 4px;
  margin-bottom: 40px;
  text-align: center;
}

h2::after {
  content: " ";
  display: block;
  width: 100px;
  height: 2px;
  background-color: #7e3200;
  margin: 30px auto;
}

/* BUTTONS */

.btn {
  color: #fff;
  text-decoration: none;
  border: 2px solid #7e3200;
  padding: 10px 25px;
  border-radius: 100px;
  transition: background-color 0.2s, border 0.2s;
}

.btn-full:link,
.btn-full:visited {
  background-color: #7e3200;
  margin-right: 25px;
}

.btn-full:hover,
.btn-full:active {
  background-color: #5c2500;
  border: 2px solid #5c2500;
}

.btn-transparent:link,
.btn-transparent:visited {
  background-color: #7e3200;
}

.btn-transparent:hover,
.btn-transparent:active {
  background-color: #5c2500;
  border: 2px solid #5c2500;
}

/* LOVE TEA SECTION ITEM */

section {
  padding: 80px 0;
}

.description {
  line-height: 145%;
  width: 70%;
  margin: 0 auto;
  text-align: center;
  font-size: 110%;
}

.love-tea-section-item {
  display: inline-block;
  width: 20%;
  vertical-align: text-top;
}

.love-tea-section-item-container {
  text-align: justify;
  margin-top: 50px;
}

.love-tea-section-item-container::after {
  content: "";
  display: inline-block;
  width: 100%;
}

.love-tea-section-item p {
  line-height: 125%;
}

/* H3 */

.love-tea-section-item h3 {
  text-align: center;
  margin-bottom: 10px;
}

/* ICONS */

.love-tea-section-item img {
  height: 50px;
  width: 50px;
  margin-left: 50%;
  transform: translate(-50%);
}

.row::after{
  content: "";
  display: table;
  clear: both;
}

/* TEATYPES */

.tea-types-section {
  padding: 0;
}

.tea-types-section::after {
  content: "";
  clear: both;
  display: block;
}

.tea-types-list {
  list-style: none;
  width: 100%;
}

.tea-types-list li {
  display: block;
  float: left;
  width: 25%;
}

.tea-photo-container {
  width: 100%;
  overflow: hidden;
  background-color: #000;
}

.tea-photo-container img {
  opacity: 0.7;
  width: 100%;
  height: 315px;
  transform: scale(1.15);
  transition: transform 0.5s, opacity 0.5s;
}

.tea-photo-container img:hover {
  transform: scale(1.03);
  opacity: 1;
}

/* HOW IT WORKS SECTION */

.how-it-works-section {
  background-color: #f4f4f4;
}

.how-works-img-container {
  margin-top: 50px;
  width: 50%;
  float: left;
}

.cosy-tea {
  width: 100%;
}

.steps-container {
  float: left;
  width: 45%;
  margin-left: 5%;
  margin-top: 95px;
}

.steps-container div:nth-child(3) {
  margin-top: 2.5%;
}

.steps-container p {
  font-size: 120%;
  margin-bottom: 40px;
}

.steps-container div {
  border: 2px solid #7e3200;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  text-align: center;
  float: left;
  font-size: 150%;
  padding-top: 8px;
  margin-right: 30px;
}

/* LOCATIONS SECTION */
.all-locations {
  text-align: justify;
  margin-top: 50px;
}

.location-container {
  width: 20%;
  display: inline-block;
}

.all-locations::after {
  content: "";
  width: 100%;
  display: inline-block;
}

.location-image {
  width: 100%;
  height: 150px;
}

.location-container h3 {
  text-align: center;
}

.customer-icon, .tea-icon {
  margin: 0px 7px 5px 0px;
}

